# macana2

./: .gitignore  CMakeLists.txt  INSTALL  Makefile  MergeNote.md  README.md  apDefault.xml  apPointLMT.xml  apScienceLMT.xml  beammap.cpp  beammap_gui.cpp  beammap_gui.h  beammap_gui.ui  fitswriter.cpp  macana.md  macana2.pri  macana2.pro  macana_core.pro  macanap.cpp  qcustomplot
Analysis/: AnalParams.cpp  SimParams.cpp
Clean/: AzElTemplateCalculator.cpp  Clean.cpp  Clean2dStripe.cpp  CleanBspline.cpp  CleanHigh.cpp  CleanIterativeMean.cpp  CleanPCA.cpp  CleanSelector.cpp
Mapmaking/: Coaddition.cpp  CompletenessSim.cpp  Map.cpp  NoiseRealizations.cpp  Observation.cpp  PointSource.cpp  WienerFilter.cpp
Observatory/: Array.cpp  Detector.cpp  Telescope.cpp  TimePlace.cpp
Simulate/: AtmosphereRandom.cpp  MapNcFile.cpp  SimulationInserter.cpp  Subtractor.cpp
Sky/: Source.cpp  astron_utilities.cpp
Sky/Novas/: eph_manager.c  eph_manager.h  novas.c  novas.h  readeph0.c
Utilities/: BinomialStats.cpp  GslRandom.cpp  SBSM.cpp  fitswriter.cpp  gaussFit.cpp  mpfit.cpp  sparseUtilities.cpp  vector_utilities.cpp
beammap_gui/: CMakeLists.txt  beammap_gui.cpp  beammap_gui.h  beammap_gui.pro  beammap_gui.ui  colormapcontrol.cpp  colormapcontrol.h  colormapcontrol.ui  domitem.cpp  dommodel.cpp  imageview.cpp  imageview.h  imageview.ui  mapviewer.cpp  mapviewer.h  mapviewer.ui  mathutils.h
calibration/parameters_LMT11A/: bololist.csv  fit_parameters_bolodc2responsivity_LMT11A.sav  fit_parameters_bolodc2tau_LMT11A.sav
calibration/parameters_LMT13A/: aztec_LMT_params_beammap.sav  bololist.csv  fit_parameters_bolodc2responsivity_LMT13A.sav  fit_parameters_bolodc2tau_LMT13A.sav
calibration/parameters_LMTES3/: aztec_LMT_params_beammap.sav  fit_parameters_bolodc2responsivity_LMTES3.sav  fit_parameters_bolodc2tau_LMTES3.sav
calibration/parameters_LMTES4/: aztec_LMT_params_beammap.sav  bololist.csv  fit_parameters_bolodc2responsivity_LMTES4.sav  fit_parameters_bolodc2tau_LMTES4.sav
cmake/: FetchContentHelper.cmake  FindCCFits.cmake  FindCXSparse.cmake  FindNetCDF.cmake  GetCompilerPrefix.cmake  GetVersionFromGitTag.cmake  PrintProperties.cmake  print_properties.cmake
config/: ap.xml  apSimulate.xml  apbDefault.xml  apbDefault3.xml
documentation/: macana.doxy  macana.doxyfile
include/: AnalParams.h  Array.h  AtmosphereRandom.h  AzElTemplateCalculator.h  BinomialStats.h  Clean.h  Clean2dStripe.h  CleanAPCA.h  CleanBspline.h  CleanHigh.h  CleanICA.h  CleanIterativeMean.h  CleanPCA.h  CleanSelector.h  Coaddition.h  CompletenessSim.h  Detector.h  GslRandom.h  Map.h  MapNcFile.h  NoiseRealizations.h  Observation.h  PointSource.h  PythonWavelet.h  SBSM.h  SimParams.h  SimulatorInserter.h  Source.h  Subtractor.h  Telescope.h  TimePlace.h  WienerFilter.h  astron_utilities.h  gaussFit.h  intarray2bmp.h  mpfit.h  nr3.h  sparseUtilities.h  tinyxml2.h  vector_utilities.h
port/: CMakeLists.txt  NOTE.md  README.md  port.pro  port_bandpass.cpp  port_despike.cpp  port_filter.cpp  port_generic_curvefit.cpp  port_timestream_pcaclean.cpp  port_timestream_sensitivity.cpp
port/include/: eigen3_utils.h  eigen_utils.h  logging.h  port_bandpass.h  port_despike.h  port_downsample.h  port_filter.h  port_generic_curvefit.h  port_timestream_pcaclean.h  port_timestream_sensitivity.h
port/include/utils/: logging.h
port/test/: test_main.cpp  test_port_bandpass.cpp  test_port_despike.cpp  test_port_downsample.cpp  test_port_filter.cpp  test_port_generic_curvefit.cpp  test_port_timestream_pcaclean.cpp  test_port_timestream_sensitivity.cpp
python/aztec/: __init__.py
python/aztec/gaussfit/: __init__.py
python/aztec/macana/: __init__.py  aptools.py  bstats.py  pointing.py
python/aztec/map/: __init__.py
python/aztec/plots/: __init__.py
python/aztec/util/: __init__.py
python/aztec/util/filters/: __init__.py
sample_files/lmt/raw_data/: sample_lmt.bstats
test/: AnalParamsTest.cpp  CMakeLists.txt  GaussFitTest.cpp  MapTest.cpp  test.pro  tst_testcase.h
test/data/: test_ap.xml  test_apb.xml
